2024.1/multicore_multihart_2c_2h_ip/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp.clang-tidy.loop-label.out.log
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:1316:7: warning: Added loop label VITIS_LOOP_1223_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1223_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:1316:7: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:2290:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:2290:5: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:2304:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:2304:5: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:2318:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:2318:5: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:3947:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:3947:7: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6066:3: warning: Added loop label VITIS_LOOP_28_1:   [xilinx-label-all-loops]
  for (h1=0; h1<(1<<1); h1++){
  ^~~
  VITIS_LOOP_28_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6066:3: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6069:5: warning: Added loop label VITIS_LOOP_31_2:   [xilinx-label-all-loops]
    for (r1=0; r1<(1<<5); r1++){
    ^~~
    VITIS_LOOP_31_2: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6069:5: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6090:3: warning: Added loop label VITIS_LOOP_52_1:   [xilinx-label-all-loops]
  for (h1=0; h1<(1<<1); h1++){
  ^~~
  VITIS_LOOP_52_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6090:3: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6104:3: warning: Added loop label VITIS_LOOP_66_1:   [xilinx-label-all-loops]
  for (h1=0; h1<(1<<1); h1++){
  ^~~
  VITIS_LOOP_66_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6104:3: note: FIX-IT applied suggested code changes
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6156:58: error: ram_1p is not valid value for option interface BRAM's option 'storage_type' [clang-diagnostic-error]
#pragma HLS INTERFACE bram port=ip_data_ram storage_type=ram_1p
                                                         ^
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6239:3: warning: Added loop label VITIS_LOOP_197_1:   [xilinx-label-all-loops]
  do {
  ^~
  VITIS_LOOP_197_1: 
/home/goossens/goossens-book-ip-projects/2024.1/multicore_multihart_2c_2h_ip/workspace/hls_component/multihart_ip/hls/.autopilot/db/multihart_ip.pp.0.cpp:6239:3: note: FIX-IT applied suggested code changes
